# gamut

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  nextjs.yml
assets/: preferences.css
docs/: cli.md  logging.md  next.config.mjs  package.json
docs/app/docs/: layout.tsx
docs/content/docs/: cli.mdx  configuration.mdx  getting-started.mdx  index.mdx  meta.json
docs/lib/: layout.shared.tsx  versions.ts
src/: cli.rs  desktop.rs  ipc.rs  lib.rs  main.rs  runtime.rs
src/app/: launcher.rs  mod.rs  styles.rs  view.rs
src/core/: app_command.rs  assets.rs  display_target.rs  error.rs  logging.rs  mod.rs  storage.rs  theme.rs
src/core/cli/: command.rs  mod.rs  output.rs
src/core/cli/command/: config.rs  help.rs  mod.rs  mode.rs  shared.rs
src/core/desktop/: cache.rs  discovery.rs  icons.rs  mod.rs  model.rs  search.rs
src/core/desktop/icons/: context.rs  mod.rs  paths.rs  search.rs
src/core/display/: mod.rs
src/core/ipc/: command.rs  mod.rs  path.rs  transport.rs
src/core/preferences/: mod.rs  model.rs  normalize.rs  process.rs  store.rs
src/core/preferences/config/: command.rs  (+7 more)
src/core/runtime/: daemon.rs  mod.rs
src/core/search/: applications.rs  mod.rs  runtime.rs
src/core/tray/: icon.rs  linux.rs  mod.rs  unsupported.rs
src/ui/: constants.rs  mod.rs  preferences_app.rs  styles.rs  surface.rs  theme.rs  view.rs
src/ui/format/: mod.rs  number.rs
src/ui/launcher/: actions.rs  bootstrap.rs  calculator.rs  input.rs  mod.rs  preferences.rs  progress.rs  receiver.rs  search.rs  state.rs  subscription.rs  update.rs
src/ui/layout/: metrics.rs  mod.rs  preferences.rs
src/ui/preferences/: general.rs  mod.rs  model.rs  shortcuts.rs  tabs.rs  theme.rs  widgets.rs
src/ui/theme/: color_scheme.rs  mod.rs  palette.rs  resolver.rs
src/ui/view/: actions.rs  bottom_strip.rs  mod.rs  progress.rs  results.rs  search.rs  utils.rs
(+37 files in other folders)
