[package]
name = "gamut"
version = "0.1.0"
edition = "2024"

[dependencies]
freedesktop-desktop-entry = "0.8.1"
iced = { version = "0.14.0", default-features = false, features = ["tokio", "image", "svg", "wayland", "wgpu"] }
iced_layershell = "0.15.0"
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
