[package]
name = "gamut"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
freedesktop-desktop-entry = "0.8.1"
iced = { version = "0.14.0", default-features = false, features = ["tokio", "image", "svg", "wayland", "wgpu"] }
iced_layershell = "0.15.0"
libc = "0.2"
log = "0.4.29"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
resvg = { version = "0.47.0", default-features = false }
tray-icon = { version = "0.21.3", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
