[package]
name = "gamut"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.31"
dark-light = "2.0.0"
env_logger = "0.11.9"
freedesktop-desktop-entry = "0.8.1"
iced = { version = "0.14.0", default-features = false, features = ["tokio", "image", "svg", "wayland", "wgpu"] }
iced_layershell = "0.15.0"
libc = "0.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
resvg = { version = "0.47.0", default-features = false }
tray-icon = { version = "0.21.3", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
